--- a/src/app/component/list-task/list-task.component.html
+++ b/src/app/component/list-task/list-task.component.html
@@ -1,8 +1,4 @@
-<div class="card mt-5">
-    <div class="card-header">
-        <h3>My Tasks</h3>
-    </div>
-    <div class="card-body">
+
         <table class="table">
             <thead>
 
@@ -36,12 +32,10 @@
                     </td>
 
                     <td>
-                        <button class="btn btn-success mr-2">Editar</button>
+                        <button [routerLink]="['editar_task',task.id]" class="btn btn-success mr-2">Editar</button>
                         <button class="btn btn-danger">Excluir</button>
                     </td>
                 </tr>
             </tbody>
 
         </table>
-    </div>
-</div>
