--- a/src/app/pages/my-tasks/my-tasks.component.html
+++ b/src/app/pages/my-tasks/my-tasks.component.html
@@ -1,6 +1,19 @@
-
 <div class="container">
+    <div class="card mt-5">
+        <div class="card-header">
+            <div class="row">
+                <div class="col">
 
-    <app-list-task></app-list-task>
-    
+                    <h3>My Tasks</h3>
+                </div>
+                <div class="col text-right">
+                    <a  routerLink="add-task" class="btn btn-success">Nova tarefa</a>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <app-list-task></app-list-task>
+
+        </div>
+    </div>
 </div>
