finalização da task front-end

--- a/src/app/component/form-task/form-task.component.html
+++ b/src/app/component/form-task/form-task.component.html
@@ -14,7 +14,7 @@
                 Descrição (opcional)
             </label>
             <textarea name="decription" placeholder="Descrição da tarefa" id="descricao"
-                class="form-control" [value]="registro.description" [(ngModel)]="registro.description" required></textarea>
+                class="form-control" [value]="registro.description" [(ngModel)]="registro.description"></textarea>
 
             <div *ngIf="registro.id">
                 <label class="mt-3">Estado</label>
