--- a/src/app/component/list-task/list-task.component.html
+++ b/src/app/component/list-task/list-task.component.html
@@ -23,17 +23,16 @@
                     </td>
                     <td>{{task.title}}</td>
                     <td>
-                        <button type="button" (click)="modal.showModal=true" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
+                        <button type="button"  class="btn btn-primary" [routerLink]="['descricao-task',task.id]">
                             Descrição
                         </button>
 
-                        <app-modal-message #modal [title]="task.title" [conteudo]="task.description"></app-modal-message>
+                       
                     </td>
 
                     <td>
                         <button [routerLink]="['editar_task',task.id]" class="btn btn-success mr-2">Editar</button>
-                        <button class="btn btn-danger">Excluir</button>
+                        <button class="btn btn-danger" (click)="delete(task.id)">Excluir</button>
                     </td>
                 </tr>
             </tbody>
